
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint64_t ;
typedef int uint32_t ;
typedef scalar_t__ mach_vm_address_t ;
typedef scalar_t__ mach_port_t ;
typedef scalar_t__ kern_return_t ;
typedef int CFMutableDictionaryRef ;


 int CFDictionaryAddValue (int ,int ,int ) ;
 int CFDictionaryCreateMutable (int *,int ,int *,int *) ;
 int CFRelease (int ) ;
 int CFSTR (char*) ;
 int EXIT_FAILURE ;
 scalar_t__ KERN_SUCCESS ;
 scalar_t__ MACH_PORT_NULL ;
 int _IOHIDSerialize (int ,scalar_t__*) ;
 scalar_t__ bootstrap_look_up (int ,char*,scalar_t__*) ;
 int bootstrap_port ;
 int exit (int ) ;
 scalar_t__ io_hideventsystem_create_virtual_service (scalar_t__,void*,int ,int *) ;
 int kCFTypeDictionaryKeyCallBacks ;
 int kCFTypeDictionaryValueCallBacks ;
 int printf (char*,...) ;

int main(int argc, char** argv) {
  kern_return_t err;



  mach_port_t service_port = MACH_PORT_NULL;

  err = bootstrap_look_up(bootstrap_port, "com.apple.iohideventsystem", &service_port);
  if (err != KERN_SUCCESS || service_port == MACH_PORT_NULL) {
    printf("failed to lookup service\n");
    exit(EXIT_FAILURE);
  }

  printf("got service port: 0x%x\n", service_port);


  CFMutableDictionaryRef dict = CFDictionaryCreateMutable(((void*)0), 0, &kCFTypeDictionaryKeyCallBacks, &kCFTypeDictionaryValueCallBacks);
  CFDictionaryAddValue(dict, CFSTR("key"), CFSTR("value"));

  mach_vm_address_t out_ptr = 0;
  uint32_t size = _IOHIDSerialize(dict, &out_ptr);

  CFRelease(dict);

  uint64_t id_out = 0;
  err = io_hideventsystem_create_virtual_service(service_port, (void*)out_ptr, size, &id_out);

  return 0;
}
